Tests/VaultCoreTests/CompileFail/Fixtures/securebytes-consume-while-borrowed.swift
import VaultCore

// MISUSE: consuming the buffer while a scoped borrow is active.
func misuse(bytes: consuming SecureBytes) {
    bytes.withUnsafeBytes { _ in
        bytes.zeroAndFree()
    }
}
